--- a/Cпринт 4 Предобработка данных/Cпринт 4 Предобработка данных .ipynb
+++ b/Cпринт 4 Предобработка данных/Cпринт 4 Предобработка данных .ipynb
@@ -55,26 +55,83 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2deebaf5",
+   "id": "417caef1",
    "metadata": {},
    "source": [
-    "<div class=\"alert alert-warning\">\n",
-    "<h2> Комментарий ревьюера 🤓<a class=\"tocSkip\"> </h2>\n",
+    "Содержание:\n",
+    "1. Импортируйте библиотеку pandas. Считайте данные из csv-файла в датафрейм и сохраните в переменную data. Путь к файлу: /datasets/data.csv. Скачать датасет\n",
+    "2. Выведите первые 20 строчек датафрейма data на экран.\n",
+    "3. Выведите основную информацию о датафрейме с помощью метода info(). \n",
+    "Шаг 2. Предобработка данных\n",
+    "4. Выведите количество пропущенных значений для каждого столбца. Используйте комбинацию двух методов.\n",
+    "5. В двух столбцах есть пропущенные значения. Один из них — days_employed. Пропуски в этом столбце вы обработаете на следующем этапе. Другой столбец с пропущенными значениями — total_income — хранит данные о доходах. На сумму дохода сильнее всего влияет тип занятости, поэтому заполнить пропуски в этом столбце нужно медианным значением по каждому типу из столбца income_type. Например, у человека с типом занятости сотрудник пропуск в столбце total_income должен быть заполнен медианным доходом среди всех записей с тем же типом. \n",
+    "6. В данных могут встречаться артефакты (аномалии) — значения, которые не отражают действительность и появились по какой-то ошибке. Таким артефактом будет отрицательное количество дней трудового стажа в столбце days_employed. Для реальных данных это нормально. Обработайте значения в этом столбце: замените все отрицательные значения положительными с помощью метода abs().\n",
+    "7. Для каждого типа занятости выведите медианное значение трудового стажа в днях из столбца days_employed. У двух типов (безработные и пенсионеры) получатся аномально большие значения. Исправить такие значения сложно, поэтому оставьте их как есть.\n",
+    "8. Выведите перечень уникальных значений столбца children.\n",
+    "9. В столбце children есть два аномальных значения. Удалите строки, в которых встречаются такие аномальные значения из датафрейма data.\n",
+    "10. Ещё раз выведите перечень уникальных значений столбца children, чтобы убедиться, что артефакты удалены.\n",
+    "11. Заполните пропуски в столбце days_employed медианными значениями по каждому типу занятости income_type. \n",
+    "12.  Убедитесь, что все пропуски заполнены. Проверьте себя и ещё раз выведите количество пропущенных значений для каждого столбца с помощью двух методов.\n",
+    "13. Замените вещественный тип данных в столбце total_income на целочисленный с помощью метода astype().\n",
+    "14. Обработайте неявные дубликаты в столбце education. В этом столбце есть одни и те же значения, но записанные по-разному: с использованием заглавных и строчных букв. Приведите их к нижнему регистру.\n",
+    "15. Выведите на экран количество строк-дубликатов в данных. Если такие строки присутствуют, удалите их. Сбрасывать индексы после удаления строк дубликатов с помощью reset_index(drop=True) здесь не требуется.\n",
+    "16. На основании диапазонов, указанных ниже, создайте в датафрейме data столбец total_income_category с категориями:\n",
+    "0–30000 — 'E';\n",
+    "30001–50000 — 'D';\n",
+    "50001–200000 — 'C';\n",
+    "200001–1000000 — 'B';\n",
+    "1000001 и выше — 'A'.\n",
+    "Например, кредитополучателю с доходом 25000 нужно назначить категорию 'E', а клиенту, получающему 235000, — 'B'.\n",
+    "17. Выведите на экран перечень уникальных целей взятия кредита из столбца purpose.\n",
+    "18. Создайте функцию, которая на основании данных из столбца purpose сформирует новый столбец purpose_category, куда войдут следующие категории:\n",
+    "'операции с автомобилем',\n",
+    "'операции с недвижимостью',\n",
+    "'проведение свадьбы',\n",
+    "'получение образования'.\n",
+    "19. Есть ли зависимость между количеством детей и возвратом кредита в срок?\n",
+    "20. Есть ли зависимость между семейным положением и возвратом кредита в срок?\n",
+    "21. Есть ли зависимость между уровнем дохода и возвратом кредита в срок?\n",
+    "22. Как разные цели кредита влияют на его возврат в срок?\n",
+    "23. Приведите возможные причины появления пропусков в исходных данных.\n",
+    "24. Объясните, почему заполнить пропуски медианным значением — лучшее решение для количественных переменных.\n",
     "\n",
-    "Введение, как и общий вывод - важные части твоей работы, на которые в первую очередь обращает внимание заказчик. Введение станет лучше, если ты добавишь в него:\n",
-    "* заголовок,\n",
+    "Цель исследования - нужно разобраться, влияет ли семейное положение и количество детей клиента на факт погашения кредита в срок. Входные данные от банка — статистика о платёжеспособности клиентов.\n",
     "\n",
-    "* краткое описание проекта,\n",
+    "Исходные данные - данные банка.\n",
     "\n",
-    "* выделим цель проекта\n",
+    "На что нужно обратить внимание:\n",
     "\n",
-    "* описание данных\n",
+    "- Какие методы замены типов данных, обработки пропусков и дубликатов применяете?\n",
+    "- Категоризируете ли данные?\n",
+    "- Соблюдаете ли структуру проекта и поддерживаете аккуратность кода?\n",
+    "- Какие выводы делаете?\n",
+    "- Оставляете ли комментарии к шагам?\n",
     "\n",
-    "* краткий план работы, выделим основные этапы, которые должны сделать.\n",
+    "Описание данных\n",
     "\n",
-    "Тогда получатель отчета сможет быстрей его понять.\n",
+    "- children — количество детей в семье\n",
     "\n",
-    "</div>"
+    "- days_employed — общий трудовой стаж в днях\n",
+    "\n",
+    "- dob_years — возраст клиента в годах\n",
+    "\n",
+    "- education — уровень образования клиента\n",
+    "\n",
+    "- education_id — идентификатор уровня образования\n",
+    "\n",
+    "- family_status — семейное положение\n",
+    "\n",
+    "- family_status_id — идентификатор семейного положения\n",
+    "\n",
+    "- gender — пол клиента\n",
+    "\n",
+    "- income_type — тип занятости\n",
+    "\n",
+    "- debt — имел ли задолженность по возврату кредитов\n",
+    "\n",
+    "- total_income — ежемесячный доход\n",
+    "\n",
+    "- purpose — цель получения кредита"
    ]
   },
   {
@@ -2217,7 +2274,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.5"
+   "version": "3.9.13"
   },
   "toc": {
    "base_numbering": 1,
